Stupid overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,6 @@
 
 * {
   box-sizing: border-box;
-  overscroll-behavior: none;
-  overflow-x: hidden;
 }
 
 body,html {
@@ -18,6 +16,7 @@ body,html {
   width: 100svw;
   height: 100svh;
   overscroll-behavior: none;
+  overflow-x: hidden;
   box-sizing: border-box;
   padding: 0;
 }
